# cevm

./: .bumpversion.cfg  .clang-tidy  .gitignore  AGENTS.md  BENCHMARKS.md  BENCHMARKS_V045.txt  BENCHMARKS_V046_2.txt  BENCHMARKS_V0472.txt  CHANGELOG.md  CMakeLists.txt  COVERAGE.md  CUDA_AUDIT.md  Dockerfile  README.md  appveyor.yml  cevm_cgo.go  circle.yml  codealike.json
.github/workflows/: cuda.yml  quasar-coverage.yml  quasar-cuda-build.yml
cmake/: FindGMP.cmake  LibraryTools.cmake
cmake/Hunter/: config.cmake  init.cmake
cmake/toolchains/: clang-libcxx-debug.cmake  riscv32.cmake
docs/: efficient_gas_calculation_algorithm.md
docs/architecture/: gpu-ecosystem-inventory.md  v3-analysis.md  v3-kernel-design.md
docs/benchmarks/: v0.27.0-1m-baseline-2026-04-25.md  v0.27.0-bench-2026-03-06.md  v0.27.0-bench-2026-03-06.txt  v0.28.0-bench-2026-04-25.md
include/cevm/: cevm.h
include/evmmax/: evmmax.hpp
lib/: CMakeLists.txt
lib/cevm_precompiles/: CMakeLists.txt  blake2b.cpp  blake2b.hpp  bls.cpp  bls.hpp  bn254.cpp  bn254.hpp  ecc.hpp  kzg.cpp  kzg.hpp  modexp.cpp  modexp.hpp  mulmod.cpp  mulmod.hpp  ripemd160.cpp  ripemd160.hpp  secp256k1.cpp  secp256k1.hpp  secp256r1.cpp  secp256r1.hpp  sha256.cpp  sha256.hpp
lib/cevm_precompiles/pairing/: field_template.hpp
lib/cevm_precompiles/pairing/bn254/: fields.hpp  pairing.cpp  utils.hpp
lib/evm/: CMakeLists.txt  COVERAGE.md  advanced_analysis.cpp  advanced_analysis.hpp  advanced_execution.cpp  advanced_execution.hpp  advanced_instructions.cpp  baseline.hpp  baseline_analysis.cpp  baseline_execution.cpp  baseline_instruction_table.cpp  baseline_instruction_table.hpp  constants.hpp  cpu_check.cpp  delegation.cpp  delegation.hpp  execution_state.hpp  instructions.hpp  instructions_calls.cpp  instructions_opcodes.hpp  instructions_storage.cpp  instructions_traits.hpp  instructions_xmacro.hpp  lru_cache.hpp  tracing.cpp  tracing.hpp  vm.cpp  vm.hpp
lib/evm/gpu/: bench_block.cpp  bench_parallel.cpp  fiber_suspend_resume.metal  go_bridge.cpp  go_bridge.h  gpu_dispatch.cpp  gpu_dispatch.hpp  gpu_state_hasher.hpp  keccak_residency.hpp  mv_memory.cpp  mv_memory.hpp  parallel_engine.cpp  parallel_engine.hpp  parallel_host.hpp  precompile_dispatch.metal  scheduler.cpp  scheduler.hpp  test_modes.cpp  test_opcodes.cpp  test_unified_pipeline.cpp  unified_pipeline.cpp  unified_pipeline.hpp
lib/evm/gpu/cuda/: block_stm.cu  block_stm_host.cpp  block_stm_host.hpp  evm_kernel.cu  evm_kernel_host.cpp  evm_kernel_host.hpp  keccak256.cu  keccak_host.cpp  keccak_host.hpp  state_table.cu  state_table_host.cpp  state_table_host.hpp  tx_validate.cu  tx_validate_host.cpp  tx_validate_host.hpp
lib/evm/gpu/host/: call_frame.hpp  code_resolver.cpp  code_resolver.hpp  evmc_bridge.cpp  evmc_bridge.hpp  frame_cuda.cu  frame_metal.mm
lib/evm/gpu/kernel/: bench_kernel.cpp  evm_interpreter.hpp  evm_kernel.metal  evm_kernel_host.hpp  evm_kernel_host.mm  evm_kernel_v2.metal  v3_persistent.metal  v3_persistent_host.hpp  v3_persistent_host.mm  v3_queue.hpp
lib/evm/gpu/metal/: bench_keccak.cpp  keccak256.metal  keccak_host.hpp  keccak_host.mm
lib/evm/gpu/precompiles/: blake2f_cpu.cpp  bls12_381_cpu.cpp  bls12_381_cuda.cpp  bls12_381_metal.mm  bn256_cpu.cpp  dex_match_cpu.cpp  dex_match_metal.mm  ecrecover_cpu.cpp  ecrecover_cuda.cpp  ecrecover_metal.mm  identity.cpp  internal.hpp  modexp_cpu.cpp  point_eval_cpu.cpp  point_eval_metal.mm  precompile_dispatch.cpp  precompile_dispatch.hpp  ripemd160_cpu.cpp  sha256_cpu.cpp
lib/evm/gpu/slot/: slot_engine.hpp  slot_engine.mm  slot_kernel.metal  slot_layout.hpp
lib/evm/state/: account.hpp  bench_state.cpp  evmc_host.hpp  processor.cpp  processor.hpp  state_db.cpp
lib/evm/stm/: conflict_spec.cpp  conflict_spec.hpp
lib/evmmax/: CMakeLists.txt
lib/evmone_precompiles/: modexp.cpp
test/: CMakeLists.txt
test/bench/: CMakeLists.txt  bench.cpp  helpers.hpp  synthetic_benchmarks.cpp  synthetic_benchmarks.hpp
test/blockchaintest/: CMakeLists.txt  blockchaintest.cpp  blockchaintest_runner.cpp  blockchaintest_runner.hpp
test/experimental/: CMakeLists.txt  jumpdest_analysis.cpp  jumpdest_analysis.hpp
test/fuzzer/: CMakeLists.txt  README.md  fuzzer.cpp
test/integration/: CMakeLists.txt
test/internal_benchmarks/: CMakeLists.txt  evmmax_bench.cpp  find_jumpdest_bench.cpp  lru_cache_bench.cpp  memory_allocation.cpp  realloc_behavior.cpp
test/precompiles_bench/: CMakeLists.txt  precompiles_bench.cpp
test/state/: CMakeLists.txt  account.hpp  blob_params.hpp  block.cpp  block.hpp  bloom_filter.cpp  bloom_filter.hpp  errors.hpp  ethash_difficulty.cpp  ethash_difficulty.hpp  hash_utils.hpp  host.cpp  host.hpp  precompiles.cpp  precompiles.hpp  precompiles_gmp.cpp  precompiles_gmp.hpp  precompiles_internal.hpp  precompiles_libsecp256k1.cpp  precompiles_libsecp256k1.hpp  requests.cpp  requests.hpp  state.cpp  state.hpp  state_diff.hpp  state_view.hpp  system_contracts.cpp  system_contracts.hpp  transaction.hpp
test/statetest/: CMakeLists.txt  statetest.cpp  statetest_runner.cpp
test/t8n/: CMakeLists.txt  t8n.cpp
test/unittests/: CMakeLists.txt  access_list_test.cpp  analysis_test.cpp  baseline_analysis_test.cpp  blockchaintest_loader_test.cpp  bytecode_test.cpp  cevm_test.cpp  cpu_interpreter_spec_test.cpp  dispatch_test.cpp  evm_benchmark_test.cpp  evm_calls_test.cpp  evm_control_flow_test.cpp  evm_eip2929_test.cpp  evm_eip3198_basefee_test.cpp  evm_eip3855_push0_test.cpp  evm_eip3860_initcode_test.cpp  evm_eip4844_blobhash_test.cpp  evm_eip7516_blobbasefee_test.cpp  evm_eip7939_clz_test.cpp  evm_fixture.cpp  evm_fixture.hpp  evm_memory_test.cpp  evm_other_test.cpp  evm_state_test.cpp  evm_storage_test.cpp  (+77 more)
test/utils/: CMakeLists.txt  blob_schedule.cpp  blob_schedule.hpp  blockchaintest.hpp  blockchaintest_loader.cpp  bytecode.hpp  mpt.cpp  mpt.hpp  mpt_hash.cpp  mpt_hash.hpp  rlp.hpp  rlp_encode.cpp  rlp_encode.hpp  statetest.hpp  statetest_export.cpp  statetest_loader.cpp  statetest_logs_hash.cpp  test_state.cpp  test_state.hpp  utils.cpp  utils.hpp
test/utils/stdx/: utility.hpp
(+24 files in other folders)
